fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body {
   background: #56ab2f;
   background: linear-gradient(to top, #56ab2f, #a8e063);
   background-attachment: fixed;
-  display: grid;
-  place-items: center;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-top: 2rem;
 }
 
 header {
@@ -29,8 +30,10 @@ h1 {
 }
 
 .container {
-  width: 90%;
-  max-width: 480px;
+  margin-block: auto;
+  align-self: center;
+  justify-self: center;
+  width: clamp(360px, 480px, 90%);
   background: #fff;
   border-radius: 10px;
   padding: 1rem;
@@ -114,7 +117,7 @@ h1 {
 
 .search-form input {
   height: 100%;
-  font-size: 1.25rem;
+  font-size: 1rem;
   flex: 1;
   border: none;
   outline: none;
@@ -129,7 +132,6 @@ h1 {
   display: grid;
   gap: 1rem;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 2fr 1fr 1fr;
 }
 
 .grid-item:first-child {
@@ -138,7 +140,8 @@ h1 {
   border-radius: 10px;
   padding: 1rem;
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
   flex-wrap: wrap;
   color: #fff;
   text-shadow: 0 3px 3px rgba(0, 0, 0, 0.25);
@@ -171,7 +174,7 @@ h1 {
 }
 
 .grid-item p {
-  font-size: 2rem;
+  font-size: clamp(1rem, 2rem, 1.875rem);
 }
 
 .location {
@@ -182,14 +185,17 @@ h1 {
 }
 
 .weather-image {
-  flex-basis: 40%;
+  width: clamp(30%, 150px, 100%);
+  height: auto;
+  align-self: center;
+  margin-inline: auto;
 }
 
 .weather-data {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  flex-basis: 60%;
+  flex: 1;
 }
 
 .temp {
